# tag-simulator

./: .gitignore  Cargo.toml  README.md
src/: action.rs  agent.rs  controls.rs  environment.rs  iced_ui.rs  main.rs  parameters.rs  position.rs  simulation.rs  tag_environment.rs  time.rs
src/agents/: agent.rs  agent_type.rs  basic_directional.rs  mod.rs
