[package]
name = "tag-simulator"
version = "0.1.0"
authors = ["Derek A <self@derekammerman.com>"]
edition = "2018"
publish = false

[dependencies]
log = "0.4"
env_logger = "0.8"
dashmap = "3.11.10"
clap = "2.33.3"
rand = { version = "0.7", default-features = false }
iced = { version = "0.1.1", features = ["canvas", "tokio", "debug", "async-std"] }
iced_native = { version = "0.2.2" }
async-std = { version = "1.0", features = ["unstable"] }
